--- a/Proinsure/style.css
+++ b/Proinsure/style.css
@@ -1,48 +1,41 @@
 .flex-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
 }
-
+ a {
+    text-decoration: none;
+}
 .header {
-  padding: 18px 0;
-  background-color: white;
-  position: fixed;
-  width: 100%;
+    position: fixed;
+    width: 100%;
 }
-
 .flex-container a {
-  font-size: 40px;
-  font-family: "Times New Roman", Times, serif;
-  text-decoration: none;
-  padding-left: 32px;
-  color: rgb(24, 3, 24);
-  font-weight: 500;
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+    margin: 14px;
+    padding-left: 22px;
+    color: rgb(24,3,24);
+    font-weight: 800;
 }
-
-.flex-container .nav a {
-  display: inline;
-  text-decoration: none;
-  justify-content: space-between;
-  margin-right: 32px;
-  font-family: sans-serif;
-  font-size: 18px;
-  color: rgb(129, 121, 121);
-  text-transform: uppercase;
-  font-weight: 600;
+.nav a {
+    font-family: sans-serif;
+    font-size: 18px;
+    margin-right: 42px;
+    line-height: 80px;
+    color: rgb(129,121,121);
+    text-transform: uppercase;
+    font-weight: 600;
 }
-
 .nav a:hover {
-  color: rgb(62, 55, 55);
+    color: rgb(62,55,55);
 }
-
 .btn {
-  border: 1px solid black;
-  border-radius: 2px;
-  padding: 10px 16px;
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 12px 16px;
+}
+a.btn:hover {
+    color:white;
+    background-color: rgb(24,3,24) ;
 }
 
-.btn:hover {
-  color: rgb(255, 255, 255);
-  background-color: rgb(24, 3, 24);
-}
