--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,18 +10,18 @@ body {
 .card-1 {
   text-align: center;
   background-color: white;
-  padding: 42px;
   margin: 14px;
   margin-top: 32px;
   border: 32px;
   border-radius: 24px;
-  height: 500px;
-  width: 200px;
+  height: 600px;
+  width: 350px;
 }
 .card-1 header {
   font-family: sans-serif;
   font-size: 32px;
   font-weight: 600;
+  margin-top: 14px;
 }
 .p-1 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -33,17 +33,17 @@ body {
   text-align: center;
   border: 32px;
   border-radius: 24px;
-  padding: 42px;
   margin: 14px;
   margin-top: 32px;
   background-color: white;
-  height: 500px;
-  width: 200px;
+  height: 600px;
+  width: 350px;
 }
 .card-2 header {
   font-family: sans-serif;
   font-size: 32px;
   font-weight: 600;
+  margin-top: 14px;
 }
 
 .p-2 {
@@ -55,17 +55,17 @@ body {
   text-align: center;
   border: 32px;
   border-radius: 24px;
-  padding: 42px;
   margin: 14px;
   margin-top: 32px;
   background-color: white;
-  height: 500px;
-  width: 200px;
+  height: 600px;
+  width: 350px;
 }
 .card-3 header {
   font-family: sans-serif;
   font-size: 32px;
   font-weight: 600;
+  margin-top: 14px;
 }
 .p-3 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -73,8 +73,35 @@ body {
     font-weight: 800;
 }
 ul {
-    text-align:justify;
+  display: inline;
+}
+.list-1, .list-2, .list-3, .list-4, .list-5, .list-6 {
+  display: inline-block;
+  text-align: left;
+  padding-left: 14px;
+  list-style-type: none;
+  width: 100%;
+}
+.list {
+  border-collapse: collapse;
+  text-align: left;
+  font-weight:600;
+  padding-left: 14px;
+  padding-bottom: 4px;
+  width: 100%
+}
+.price {
+  padding-right: 14px;
+  padding-bottom: 8px;
+  font-weight: 600;
+}
+hr {
+  border: 2px solid orange;
+  width: 100%;
 }
 a {
-    color: black;
+    color: orange;
+}
+a:hover {
+  color: black;
 }
