class task cards CSS flexbox

--- a/Practice-file/class-task/style.css
+++ b/Practice-file/class-task/style.css
@@ -1,104 +1,126 @@
-*{
-    font-family: 'Times New Roman', Times, serif;
+* {
+  font-family: "Times New Roman", Times, serif;
 }
 .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+img {
+  height: 150px;
+  width: 169px;
 }
 /* card-1 */
 .card-1 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 169px;
+  margin: 14px;
 }
 
-.card-1, .h1 {
-    font-size: 14px;
+.card-1 .section {
+  padding: 0 24px 14px 24px;
 }
-
-.card-1, .p-1 {
-    font-size: 8px;
+.card-1 .section button {
+  background-color: grey;
+  color: white;
+  padding: 8px;
+  border: none;
+  width: 100%;
 }
 
 /* card-2 */
 .card-2 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 169px;
+  margin: 14px;
 }
 
-.card-2, .h2 {
-    font-size: 14px;
-
+.card-2 .section {
+  padding: 0 24px 14px 24px;
 }
-
-.card-2, .p-2 {
-    font-size: 8px;
+.card-2 .section button {
+  background-color: grey;
+  color: white;
+  padding: 8px;
+  border: none;
+  width: 100%;
 }
 
 /* card-3 */
-
 .card-3 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.card-3, .h3 {
-    font-size: 14px;
-
-}
-
-.card-3, .p-3 {
-    font-size: 8px;
-}
-
-/* card-4 */
-
-.card-4 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 20px;
-}
-
-.card-4, .h4 {
-    font-size: 14px;
-
-}
-
-.card-4, .p-4 {
-    font-size: 8px;
-}
-
-/* card-5 */
-
-.card-5 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.card-5, .h5 {
-    font-size: 14px;
-
-}
-
-.card-5, .p-5 {
-    font-size: 8px;
-}
-
-/* card-6 */
-
-.card-6 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 20px;
-}
-
-.card-6, .h6 {
-    font-size: 14px;
-
-}
-
-.card-6, .p-6 {
-    font-size: 8px;
-}
-
-button {
+    width: 169px;
+    margin: 14px;
+  }
+  
+  .card-3 .section {
+    padding: 0 24px 14px 24px;
+  }
+  .card-3 .section button {
     background-color: grey;
-    font-family: sans-serif;
     color: white;
-    width: 82px;
-    height: 32px;
-}
+    padding: 8px;
+    border: none;
+    width: 100%;
+  }
+
+  /* card-4 */
+
+  .card-4 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 169px;
+    margin: 14px;
+  }
+  
+  .card-4 .section {
+    padding: 0 24px 14px 24px;
+  }
+  .card-4 .section button {
+    background-color: grey;
+    color: white;
+    padding: 8px;
+    border: none;
+    width: 100%;
+  }
+
+  /* card-5 */
+  .card-5 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 169px;
+    margin: 14px;
+  }
+  
+  .card-5 .section {
+    padding: 0 24px 14px 24px;
+  }
+  .card-5 .section button {
+    background-color: grey;
+    color: white;
+    padding: 8px;
+    border: none;
+    width: 100%;
+  }
+
+  /* card-6 */
+
+  .card-6 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 169px;
+    margin: 14px;
+  }
+  
+  .card-6 .section {
+    padding: 0 24px 14px 24px;
+  }
+  .card-6 .section button {
+    background-color: grey;
+    color: white;
+    padding: 8px;
+    border: none;
+    width: 100%;
+  }
+  
+  
+  
+  
