--- a/Platina/style.css
+++ b/Platina/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  font-family:"Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /* header section */
@@ -68,4 +68,31 @@
   border-radius: 20px;
   padding: 12px 28px;
   transition: all 0.3s ease 0s;
+}
+/* service area */
+.service-area {
+  padding: 120px 0;
+}
+.flex-container-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.service-area .header-area {
+  text-align: center;
+}
+.service-area .header-area h2 {
+  margin-bottom: 25px;
+  font-size: 45px;
+  color: #222222;
+  line-height: 1.2em;
+  font-weight: 600;
+}
+.service-area .header-area p1 {
+  color: #777777;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.625;
+  padding-bottom: 80px;
 }
